# amtt

./: .gitignore  Cargo.toml  LICENSE  cliff.toml  deny.toml
fixtures/: private.pem  public.pem
src/: lib.rs  main.rs
src/cli/: gen_token.rs  mod.rs
src/process/: gen_token.rs  mod.rs
src/utils/: jwt.rs  mod.rs
